# advent_of_code_2021

./: CMakeLists.txt  conanfile.txt
day1/: CMakeLists.txt  main.cc  solution.cc  solution.h
day2/: CMakeLists.txt  main.cc  solution.cc  solution.h
day3/: CMakeLists.txt  main.cc  solution.cc  solution.h
day4/: CMakeLists.txt  main.cc  solution.cc  solution.h  test_solution.cc
day5/: CMakeLists.txt  main.cc  solution.cc  solution.h  test_solution.cc
day6/: CMakeLists.txt  main.cc  solution.cc  solution.h  test_solution.cc
utils/: args_parser.cc  args_parser.h  input_parser.cc  input_parser.h
